--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Gestion_sds"
         tools:targetApi="31">
         <activity
+            android:name="com.example.gestion_sds.ActivityHomeAdmin"
+            android:exported="false" />
+        <activity
+            android:name="com.example.gestion_sds.LoginAdmin"
+            android:exported="false" />
+        <activity
+            android:name="com.example.gestion_sds.Formulaire"
+            android:exported="false" />
+        <activity
             android:name="com.example.gestion_sds.ActivityItemMember"
             android:exported="false" />
         <activity
